# CHAPLAINCYB

./: .gitignore  manage.py  pyproject.toml  requirements.txt
authentication/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
blogs/: urls.py  views.py
blogs/services/: rss_service.py
captured_moments/: apps.py
chaplaincybackend/: asgi.py  settings.py  urls.py  wsgi.py
contact/: models.py  serializers.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_contactmessage_is_read_contactmessage_status_and_more.py
events/: admin.py  models.py  serializers.py  storages.py  supabase_client.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_calendarfile_file.py  0003_alter_calendarfile_file.py  0004_alter_calendarfile_file.py  0005_remove_calendarfile_file_calendarfile_file_url.py  0006_alter_calendarfile_file_url.py
groups/: admin.py  models.py  serializers.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_alter_group_options_group_is_alumni_and_more.py  0003_alter_group_options_alter_group_communities_and_more.py  0004_alter_groupimage_image.py  0005_group_year.py
readings/: admin.py  models.py  serializers.py  urls.py  views.py
readings/migrations/: 0001_initial.py  0002_prayer.py  0003_alter_prayer_options.py  0004_remove_calendarentry_verse_and_more.py
readings/services/: scraper.py
theme/: admin.py  models.py  serializers.py  urls.py  views.py
theme/migrations/: 0001_initial.py  0002_alter_theme_image.py  0003_alter_theme_image.py  (+2 more)
(+2 files in other folders)
